--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noPropertyAccessFromIndexSignature": true
-  }
+  },
+  "include": ["src/**/*"]
 }
